--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,17 @@
   <body>
     <div class="container">
       <h1>YouTube Downloader</h1>
+      <h4 style="margin-top: -10px; margin-bottom: 10px">By Gavriel Oshman</h4>
       <input type="text" id="url" placeholder="Paste YouTube link here..." />
       <button onclick="download()">Download</button>
       <p id="status"></p>
+      <p>
+        <a
+          style="color: white"
+          href="https://whatsapp.com/channel/0029Vb5ussbC6ZvcCddGVG1y"
+          >Join The Music Whatsapp Channel ❤️‍🔥🎶🪕</a
+        >
+      </p>
     </div>
     <script src="script.js"></script>
   </body>
